# BlockWorld

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flake.nix  package-lock.json
.github/workflows/: static.yml
emscripten/: default.nix
include/glad/: glad.h
src/: BlockWorld.cpp  BlockWorld.h  ChunkBlock.cpp  ChunkBlock.h  cube_tex.cpp  glad.c  wrapper_glfw.cpp  wrapper_glfw.h
src/Assets/Shaders/: program_f_0.frag  program_f_1.frag  program_f_2.frag  program_v_0.vert  program_v_1.vert  program_v_2.vert
src/ModelLoader/: tiny_loader_texture.cpp  tiny_loader_texture.h
